<resources>
    <string name="app_name">Trace My Kid</string>

    <!-- Top nav bar tittles -->
    <string name="t_gallery">Gallery</string>
    <string name="st_gallery">(Pick a picture to add record)</string>
    <string name="t_records">Records</string>
    <string name="t_profiles">Profiles</string>
    <string name="t_add_record">Add Record</string>
    <string name="t_edit_record">Edit Record</string>
    <string name="t_add_reporter">Add Reporter</string>
    <string name="t_edit_reporter">Edit Reporter</string>

    <!-- Recycler View -->
    <string name="reporter_name_placeholder">Name</string>
    <string name="reporter_relationship_placeholder">Relationship</string>
    <string name="record_title_placeholder">Activity name</string>

    <!-- Bottom nav drawer -->
    <string name="lbl_add">Add</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_records">Records</string>
    <string name="lbl_reporters">Reporters</string>
    <string name="lbl_profile">Profiles</string>

    <!-- Gallery Fragment -->
    <string name="image_item_description">Image from gallery</string>

    <!-- Add/edit Record -->
    <string name="btn_take_photo">Take a photo\n(optional)</string>
    <string name="btn_retake_photo">Retake photo</string>
    <string name="btn_discard_photo">Discard photo</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_title">Title *</string>
    <string name="lbl_notes">Notes</string>
    <string name="hint_record_title">Activity tittle!</string>
    <string name="hint_record_notes">Other note</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_reporter">Reporter</string>
    <string name="lbl_location">Location *</string>
    <string name="lbl_get_location">Get Current Location</string>
    <string name="lbl_discard">Discard</string>

    <!-- Profile add/edit Fragment -->
    <string name="lbl_name">Name</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_relationship">Relationship</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_age">Enter age</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="error_msg_name">Please enter a name.</string>
    <string name="error_msg_relationship">Relationship cannot be empty.</string>
    <string name="error_msg_age">Age cannot be empty.</string>

    <!-- Records Fragment -->
    <string name="back">Return</string>
    <string name="camera_back">Back</string>

    <string name="profile_setting">Profile Setting</string>
    <string name="fab_content_desc">Add new reporter</string>

    <!-- Record Detail Fragment   -->
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_detail_title">Title</string>
    <string name="lbl_detail_location">Location</string>
    <string name="lbl_show_location">Show location on map</string>

    <!-- General -->
    <string name="confirmation_title">Are you sure?</string>
    <string name="confirmation_desc_changesLost">All changes will be lost on exit.</string>
    <string name="confirmation_desc_deleteReporter">This reporter data will be lost and irrecoverable.</string>

    <!-- Testing -->
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>

    <string-array name="relationship">
        <item>Father</item>
        <item>Mother</item>
        <item>Sibling</item>
        <item>Aunt</item>
        <item>Uncle</item>
    </string-array>

    <string name="photo">Take Photo</string>

    <string name="splashscreen">Do not show this on startup again.</string>
</resources>