<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tb_AddReporter"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/frag_profile_report_content_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbAddRecord"
            style="@style/top_app_bar"
            android:theme="@style/top_app_bar"
            app:titleTextAppearance="@style/top_app_bar_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/t_add_reporter"
             />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout style="@style/frag_profile_report_table_row">

            <TextView
                style="@style/frag_profile_report_table_col1"
                android:text="@string/lbl_name" />

            <EditText
                android:id="@+id/etv_name"
                style="@style/frag_profile_report_table_col2"
                android:hint="@string/hint_name"
                android:inputType="text|textNoSuggestions" />

        </LinearLayout>

        <LinearLayout style="@style/frag_profile_report_table_row">

            <TextView
                style="@style/frag_profile_report_table_col1"
                android:text="@string/lbl_relationship" />

            <Spinner
                android:id="@+id/spinner_relationship"
                style="@style/frag_profile_report_table_col2" />
        </LinearLayout>

        <LinearLayout style="@style/frag_profile_report_table_row">

            <TextView
                style="@style/frag_profile_report_table_col1"
                android:layout_width="match_parent"
                android:text="@string/lbl_age" />

            <EditText
                android:id="@+id/etv_age"
                style="@style/frag_profile_report_table_col2"
                android:hint="@string/hint_age"
                android:inputType="number|numberDecimal" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_msg"
            style="@style/frag_profile_report_error_msg"
            android:text="@string/error_msg_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="130dp" />

        <LinearLayout style="@style/frag_profile_report_btn_row">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/frag_profile_report_btn.cancel"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_confirm"
                style="@style/frag_profile_report_btn.confirm"
                android:text="@string/btn_confirm" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>