<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.RecordDetailFragment">


    <ScrollView
        android:id="@+id/act_add_record_main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/act_add_record_scroll_container"
            style="@style/act_add_record_scroll_container">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_margin="@dimen/spacing_large"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@color/grey1"
                android:cropToPadding="true"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                app:cornerRadius="@dimen/borderRadius_small"
                app:srcCompat="@drawable/icon_no_image" />

            <LinearLayout
                android:id="@+id/group_retake_photo"
                style="@style/group_retake_photo"
                android:orientation="vertical"
                android:visibility="gone">


                <ImageView
                    android:id="@+id/img_saved_photo"
                    style="@style/img_saved_photo"
                    tools:ignore="ContentDescription" />

                <LinearLayout style="@style/img_saved_photo_btn_group">

                    <Button
                        android:id="@+id/btn_discard_photo"
                        style="@style/img_saved_photo_group_btn.discard" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn_retake_photo"
                        style="@style/img_saved_photo_group_btn.retake" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/divView"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout style="@style/dete_row">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/dete_lbl"
                        android:labelFor="@id/txt_date"
                        android:text="@string/lbl_date" />

                    <TextView
                        android:id="@+id/txt_date"
                        style="@style/dete_value"
                        android:text="TextView" />

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/dete_lbl"
                        android:labelFor="@id/txt_time"
                        android:text="@string/lbl_time" />

                    <TextView
                        android:id="@+id/txt_time"
                        style="@style/dete_value"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/dete_row">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/dete_lbl"
                    android:labelFor="@id/txt_title"
                    android:text="@string/lbl_detail_title" />

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/dete_value"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout style="@style/dete_row">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/dete_lbl"
                    android:labelFor="@id/txt_notes"
                    android:text="@string/lbl_notes" />

                <TextView
                    android:id="@+id/txt_notes"
                    style="@style/dete_value"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout style="@style/dete_row">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/dete_lbl"
                    android:labelFor="@id/txt_category"
                    android:text="@string/lbl_category" />

                <TextView
                    android:id="@+id/txt_category"
                    style="@style/dete_value"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout style="@style/dete_row">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/dete_lbl"
                    android:labelFor="@id/txt_reporter"
                    android:text="@string/lbl_reporter" />

                <TextView
                    android:id="@+id/txt_reporter"
                    style="@style/dete_value"
                    android:text="TextView" />
            </LinearLayout>


            <LinearLayout
                style="@style/dete_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/dete_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/groupItemGap"
                    android:text="@string/lbl_detail_location" />

                <LinearLayout
                    android:id="@+id/group_location_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/groupItemGap"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_info_location_name"
                        style="@style/dete_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:textSize="@dimen/font_large"

                        tools:text="Location name" />

                    <TextView
                        android:id="@+id/txt_info_location_coords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:maxLines="1"
                        android:textColor="@color/grey3"
                        tools:text="( 0.0, 0.0 )" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_show_location"
                    style="@style/btn_location"
                    android:text="@string/lbl_show_location" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/act_add_record_main_btn_group"
                android:weightSum="3">

                <Button
                    android:id="@+id/btn_delete_record"
                    style="@style/act_add_record_main_btn.discard"
                    android:layout_weight="1"
                    android:text="@string/lbl_delete" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_edit_record"
                    style="@style/act_add_record_main_btn.add"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue3"
                    android:text="@string/lbl_edit" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        </LinearLayout>


    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>